# MCJSON

./: README.md  setup.cfg
mcjson/: packmcmeta.py
mcjson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
