[metadata]
name = mcjson
version = 0.0.1
author = The Iceburg
description = Minecraft Json Generation In Python!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/The-Iceburg/MCDataPacker
classifiers = 
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True